# advent23

./: .copier-answers.yml  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  renovate.json  setup.ps1  update.ps1
.github/workflows/: main.yml  pytest.yml  sphinx.yml
.tools/requirements/: requirements_both.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt
docs/: conf.py  index.md
input/: examples.toml
requirements/: requirements_both.txt  requirements_ci.txt  requirements_dev.txt
scripts/: personalize_tests.py
src/advent23/: __init__.py  stringer.py  stringers.py
src/advent23/_lesson/: 23_12_15_day03.ipynb
src/advent23/_structured/: __init__.py  day01.ipynb
src/advent23/_template/: day01.ipynb  day01a.ipynb  day02.ipynb  day03.ipynb  day04.ipynb
src/advent23/abdul/: __init__.py  day01.ipynb  day01a.ipynb  day02.ipynb  day03.ipynb  things_that_come_up.txt
src/advent23/blake/: __init__.py  day01.ipynb  day01a.ipynb  day01b.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb
src/advent23/brad/: __init__.py  day01.ipynb  day02.ipynb  day03.ipynb
src/advent23/together/: day03.ipynb
tests/: pyproject.toml
tests/advent23_tests/: __init__.py  answers.py  attempts.py  cases.py  conftest.py  hashes.py  namespaces.py  parametrizations.py  test_advent23.py  test_all.py  test_day01.py  test_day02.py
tests/advent23_tests/examples/: __init__.py  conftest.py  test_examples.py
tests/advent23_tests/puzzles/: __init__.py  conftest.py  test_puzzles.py
(+2 files in other folders)
