[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "advent23_tests"
description = "Tests."
version = "0.0.0"
dependencies = [
    "astroid==3.0.2",
    "boilercore==0.0.4",
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest==7.4.3",
]
